# skim

./: .coverage  .coveragerc  .dockerignore  .drone.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  Berksfile  Dockerfile  Dockerfile.crawl  Dockerfile.pi  Dockerfile.web  Makefile  README.md  TODO  TODO.md  Vagrantfile  build  docker-compose.yml  example.opml  kubernetes.yaml  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.py  skim.ini.example  tox.ini  uwsgi.ini  webserver
manage/: __main__.py
skim/: __init__.py  __main__.py  api.py  categories.py  configuration.py  configuration.py.example  crawl.py  database.py  dates.py  entries.py  frontend.py  index.py  markup.py  normalize.py  opml.py  parse.py  search.py  server.py  subscribe.py  subscriptions.py  topics.py  version.py
skim/migrations/: 0001.subscriptions.sql  0002.entries.sql  0003.caching-on-subscriptions.sql  0004.crawl-log.sql  0005.entry-creators.sql  0006.entry-categories.sql  0007.entries-index-timestamp.sql  0008.crawl-log-indices.sql  __init__.py
skim/static/: publishers.css  skim.css  skim.js
skim/templates/: base.html  home.html  hot.html  index.html  macros.html  subscriptions.html  subscriptions.opml
skim/tests/: conftest.py  test_categories.py  test_common.py  test_crawl.py  test_dates.py  test_entries.py  test_frontend.py  test_main.py  test_migrations.py  test_normalize.py  test_opml.py  test_parsing.py  test_server.py  test_subscriptions.py  test_subscriptions_api.py
skim/tests/examples/: gatesnotes-2021.json  gatesnotes-2021.xml  ietf-longer-atom-2005.json  ietf-short-atom-2005.json  nasa-image-of-the-day-2021.json  nasa-image-of-the-day-2021.xml  our-world-in-data-2021.json  our-world-in-data-2021.xml  (+4 more)
(+3 files in other folders)
