[tool.poetry]
name = "skim"
version = "0.1.0"
description = ""
authors = ["Chris Guidry <chris@theguidrys.us>"]

[tool.poetry.dependencies]
python = "^3.9"
aioconsole = "^0.3.2"
aiofiles = "^0.7.0"
aiohttp = {extras = ["speedups"], version = "^3.7.4"}
aiohttp-jinja2 = "^1.5"
aioresponses = "^0.7.2"
aiosqlite = "^0.17.0"
beautifulsoup4 = "^4.10.0"
humanize = "^3.12.0"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
pylint = "^2.11.1"
pytest = "^6.2.5"
pytest-aiohttp = "^0.3.0"
pytest-asyncio = "^0.15.1"
pytest-cov = "^3.0.0"
watchgod = "^0.7"
pytest-black = "^0.3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
    --black
    --cov=/skim/
    --cov-branch
    --cov-report=term-missing
    --cov-fail-under=100
"""

[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py39']

[tool.pylint."MESSAGES CONTROL"]
disable = "missing-module-docstring,missing-function-docstring"
