[tool.poetry]
name = "skim"
version = "0.1.0"
description = ""
authors = ["Chris Guidry <chris@theguidrys.us>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
    --black
    --cov=/skim/
    --cov-branch
    --cov-report=term-missing
    --cov-fail-under=100
"""

[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py39']

[tool.pylint."MESSAGES CONTROL"]
disable = "missing-module-docstring,missing-function-docstring"
